[package]
name = "mgraphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

winit = { git = "https://github.com/rust-windowing/winit.git" }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }

anyhow = "1.0"
